# nobraindev

./: .gitignore  CHANGELOG.md  CLIPBOARD_IMPLEMENTATION.md  CLIPBOARD_NEXT_STEPS.txt  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  MEMORY_OPTIMIZATION.md  PROJECT_COMPLETE.txt  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  START_HERE.md  build.sh  dev.sh  package-lock.json  release.sh  run.sh  setup.sh  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: AGENT.MD.instructions.md
.github/workflows/: release.yml
docs/: CLIPBOARD_SETUP.md  DEVELOPMENT.md  RELEASE.md  SUPABASE_SETUP.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/macos/: AppIcon.icns
src-tauri/src/: auth.rs  commands.rs  database.rs  file_storage.rs  main.rs  models.rs  search.rs
ui/: .env.example  clipboard-popup.html  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  clipboard-popup.jsx  editor.css  index.css  main.jsx  tiptap.css
ui/src/components/ui/: accountmainview.jsx  accountpanel.jsx  badge.jsx  button.jsx  card.jsx  clipboardmainview.jsx  clipboardpanel.jsx  clipboardpopup.jsx  code-block-component.jsx  confirmdialog.jsx  filepreview.jsx  filespanel.jsx  filespanel.jsx.bak  input.jsx  menusidebar.jsx  organizemodal.jsx  searchbar.jsx  searchmodal.jsx  snippetspanel.jsx  textarea.jsx  tiptap-editor.jsx
ui/src/lib/: auth.js  clerk.js  clipboard.js  supabase-auth.jsx  supabase-folder-migration.sql  supabase.js  sync.js
